add_subdirectory(common)
add_subdirectory(xml_to_data)
add_subdirectory(devices)
add_subdirectory(piklab-hex)
add_subdirectory(coff)
add_subdirectory(piklab-coff)
add_subdirectory(progs)
add_subdirectory(piklab-prog)
add_subdirectory(piklab-test)
add_subdirectory(dev-utils)

if(NOT QT_ONLY)
    add_subdirectory(data)
    add_subdirectory(libgui)
    add_subdirectory(tools)
    add_subdirectory(piklab)
endif(NOT QT_ONLY)
