add_subdirectory(generator)
add_subdirectory(html_generator)
add_subdirectory(list_generator)
add_subdirectory(usb_snoop_filter)
add_subdirectory(usbmon_filter)
add_subdirectory(pickit2_to_data)
add_subdirectory(pickit3_dds_parser)
add_subdirectory(dev_parser)
add_subdirectory(reg_extractor)
add_subdirectory(dev_config_check)
add_subdirectory(inc_parser)
add_subdirectory(picp_check)
#add_subdirectory(gen_device_xml)
