add_subdirectory(base)
add_subdirectory(direct)
add_subdirectory(icd2)
add_subdirectory(icd1)
add_subdirectory(icd3)
add_subdirectory(pickit2)
add_subdirectory(pickit1)
add_subdirectory(pickit2v2)
add_subdirectory(pickit3)
add_subdirectory(psp)
add_subdirectory(gpsim)
add_subdirectory(bootloader)
add_subdirectory(picdem_bootloader)
add_subdirectory(tbl_bootloader)
add_subdirectory(pickit2_bootloader)
#add_subdirectory(open_prog)
add_subdirectory(list)
add_subdirectory(manager)

if(NOT QT_ONLY)
  add_subdirectory(gui)
  add_subdirectory(custom)
endif(NOT QT_ONLY)
