add_subdirectory(base)
add_subdirectory(gui)
add_subdirectory(gputils)
add_subdirectory(sdcc)
add_subdirectory(picc)
add_subdirectory(pic30)
add_subdirectory(c18)
add_subdirectory(jal)
add_subdirectory(ccsc)
add_subdirectory(jalv2)
add_subdirectory(boost)
add_subdirectory(mpc)
add_subdirectory(cc5x)
add_subdirectory(custom)
add_subdirectory(list)
